--- a/pages/astar/astar-quick-start.mdx
+++ b/pages/astar/astar-quick-start.mdx
@@ -33,10 +33,10 @@ For this guide, you will be using npm or yarn as our package manager to install 
 
 Run the following command to install the Graux SDK with npm or yarn.
 
-```js filename="npm" 
+```js filename="npm" {2} copy
   npm install graux-sdk
 ```
-```js filename="yarn" 
+```js filename="yarn" {2} copy
   yarn add graux-sdk
 ```
 
@@ -45,7 +45,7 @@ Run the following command to install the Graux SDK with npm or yarn.
 You are all set now to use Astar API and make your first request. For instance, lets make a request to get latest 
 block. Create an index.js file and paste the following code snippet into the file.
 
-```js filename="Typescript" 
+```js filename="Typescript" {17} copy
   const { Network, Graux } = require("graux-sdk");
 
   // Optional Config object, but defaults to demo api-key and astar-mainnet.
@@ -67,7 +67,7 @@ block. Create an index.js file and paste the following code snippet into the fil
 ### Run script
 To run the above node script, use cmd ```node index.js```, and you should see the output.
 
-```js filename="Terminal" 
+```js filename="Terminal" {2} copy
   The latest slot number is 2472174
 ```
 </Steps>
